# solar

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  profile_example.sh  run_example.sh  rust-toolchain
.cargo/: config.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
bench/: .gitignore  README.md  RESULTS.md  bench.py  binaryTrees_vanilla.c  binarytrees_arena.cpp  latency.sh  run.py  run.sh  sieve_matrix.py
bench/c/: Makefile  alloc_matrix.py  allocs3.c  allocs5.c  bump.c  sieve.c  splay  splay.c  threads_list2.c
bench/rust/: Cargo.toml
bench/rust/src/: main.rs
examples/: allocs.solar  allocs2.solar  allocs3.solar  allocs4.solar  allocs5.solar  binarytrees.solar  binarytrees_st.solar  example.solar  file.solar  file_gc.solar  fizzbuzz.solar  hashmap.solar  infinite_loop.solar  jsleak.solar  loop.solar  loop2.solar  loop2fast.solar  loop2fn.solar  loop2fn2.solar  loop2fn3.solar  loop2fn4.solar  loop2fn5.solar  memory_safe.solar  nodes.solar  panic.solar  process_args.solar  sieve.solar  splay.solar  threads.solar  threads_alloc.solar  threads_blob.solar  threads_files.solar  threads_list.solar  threads_list2.solar  threads_loop.solar  zero.solar
java-bench/: Allocs3.java  RESULTS.md  ThreadsList2.java
llvm-pass/: .gitignore  SolarWriteBarriers.cpp
solar-system/: Cargo.toml  build.rs
solar-system/src/: arith.rs  atomic128.ll  file.rs  futex.rs  gc.rs  heap.rs  init_cell.rs  io.rs  lib.rs  mem.rs  net.rs  panic.rs  process.rs  thread.rs  thread_pool.rs  time.rs
src/: ast.rs  ast_interp.rs  codegen.rs  error.rs  interp_io.rs  ir.rs  ir_interp.rs  ir_opt.rs  lib.rs  main.rs  mangled_ast.rs  parser.rs  pipeline.rs  resolve.rs  scope.rs  typed_ast.rs  write_barriers.rs
test-utils/: Cargo.toml
tests/: codegen_line.rs  examples.rs  file_desc_gc.rs  interior_ref_gc.rs  probe_tmp.rs  process_args_env.rs  statics_gc.rs  unused.rs
tree-sitter-solar/: Cargo.toml  build.rs  grammar.js  lib.rs  tree-sitter.json
vscode-ext/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json
(+295 files in other folders)
